[tool.poetry]
name = "server"
version = "0.1.3"
description = ""
authors = ["annleefores <annleetestmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
kubernetes = "^28.1.0"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.8"
types-requests = "2.31.0.5"
kubernetes-typed = "^18.20.0"
python-semantic-release = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
