[tool.poetry]
name = "kodiko-dx-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kodiko_dx_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
boto3 = "^1.28.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
